--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
-/board/*.b#1
-/board/*.s#1
-/board/*.s#2
-/board/*.s#3
 /lm7001_si470_bridge.X/build
 /lm7001_si470_bridge.X/dist
 /lm7001_si470_bridge.X/debug
 /lm7001_si470_bridge.X/nbproject/private
-/board/*.b#2
-/board/*.b#3
 /board/*.pro
-/board/*.s#4
-/board/*.s#5
-/board/*.b##
-/board/*.s##
-/board/*.b#4
-/board/*.s#6
+/board/*.s#?
+/board/*.b#?
